Migrate from uuid to name
